--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <div class="container">
         <div class="weather-card">
-            <h1 style="color: green;">
-                GeeksforGeeks
+            <h1 style="color: rgb(125, 134, 22);">
+                Weather-Forecast
             </h1>
             <h3>
                 Weather App
@@ -34,7 +34,8 @@
                 class="animate__animated animate__fadeIn">
                 <h3 id="city-name"></h3>
                 <p id="date"></p>
-                <img id="weather-icon" src="cloudy.png" alt="Weather Icon">
+                <!-- <img id="weather-icon" src="./images/v.png" alt="Weather Icon"> -->
+                 <img id="weather-icon" src="v.png" alt="weather Icon">
                 <p id="temperature"></p>
                 <p id="description"></p>
                 <p id="wind-speed"></p>
